<resources>

    <string name="app_name">PacteraMap</string>
    <string name="come_back">返回</string>
    <string name="mid_title">中间标题</string>
    <string name="right_more">更多</string>
    <string name="start">开始</string>
    <string name="finish">完成</string>
    <string name="add_remark_title_input">请输入标题</string>
    <string name="error_no_sdcard">没有SD卡，无法存储录音数据</string>
    <string name="error_state_record">正在录音中，请先停止录音</string>
    <string name="error_unknown">无法识别的错误</string>
    <string name="start_audio">点击开始录音</string>
    <string name="audioing">正在录音中....</string>
    <string name="content_description">&#160;</string>
    <string name="open_all_content">展开全文</string>
    <string name="desc_list_item_icon">SlidingMenu</string>
    <string name="refresh">刷新</string>
    <string name="person">个人中心</string>
    <string name="user_name">用户名:</string>
    <string name="pass_word">密码:</string>
    <string name="confir_password">确认密码:</string>
    <string name="session">消息</string>
    <!--  -->
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>

</resources>